# TechDebtLedger

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly-agent.yml
docs/: self-debt-report.json
docs/adr/: README.md
scripts/: nightly_agent.py
src/techdebt/: __init__.py
src/techdebt/api/: main.py
src/techdebt/core/: config.py  engine.py  narrator.py
src/techdebt/models/: debt.py
src/techdebt/scanners/: complexity.py  dependencies.py  todos.py
tests/: test_api.py  test_config.py  test_engine.py  test_models.py  test_scanners.py
