[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TechDebtLedger"
version = "0.1.0"
description = "Automated tech debt tracker — scans repos for complexity hotspots and surfaces a prioritized payoff roadmap"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
keywords = ["tech-debt", "static-analysis", "complexity", "platform-engineering", "fintech"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "gitpython>=3.1.43",
    "python-dateutil>=2.9.0",
]

[project.scripts]
tech-debt-ledger = "techdebt.api.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/techdebt"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"